alertmanager/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: alertmanager.vkingcloud.com
    http:
      paths:
      - backend:
          serviceName: alertmanager
          servicePort: 9093
  - host: alertmanager.vkingcloud.com
    http:
      paths:
      - backend:
          serviceName: alertmanager
          servicePort: 9093
